# py_20260707

./: .gitignore  README.md  pyproject.toml  requirements.txt
claude/discussions/: README.md
claude/discussions/2026-07-10/: audience-and-accessibility.md  discussion_facilitator.md  keyboard-and-input-surface.md  microtonality.md  pedagogical-products.md  terminology-policy.md  ui-affordance-and-feedback.md
claude/discussions/2026-07-13/: chord-launcher-and-programming-modes.md  discussion_facilitator.md  melody-editing-mode.md  note-entry-shift-and-keyboard-geometry.md
claude/memory/: README.md  chords-as-cents-above-root.md  headless-matplotlib-png.md  piano-note-synthesis-recipe.md
claude/memory/acoustics/: piano-note-synthesis-recipe.md  polyphony-voice-pool.md  realtime-gate-envelope.md  streaming-piano-voice.md
claude/memory/architecture/: signal-chain.md  sounder-id.md  synth-core-library.md
claude/memory/concurrency/: event-queue.md
claude/memory/input/: note-event-reconciliation.md
claude/memory/matplotlib/: headless-png.md
claude/memory/musictheory/: chords-as-cents-above-root.md
claude/memory/process/: c-review-and-merge-handoff.md
claude/memory/pygame/: headless-render-to-png.md  key-events-note-on-off.md  mouse-hit-test-piano.md
claude/memory/sounddevice/outputstream/: blocksize.md  latency.md
claude/plans/: README.md  library-promotion.md  programming-modes-buildout.md
claude/policy/: README.md  input-policy.md  locating_python_environment.md
claude/retrospectives/: 2026-07-09-b.md  2026-07-09-c.md  2026-07-09.md  2026-07-10-b.md  2026-07-10-c.md  2026-07-10-d.md  2026-07-10-e.md  2026-07-10-f.md  2026-07-10.md  2026-07-11.md  README.md
claude/speculations/: README.md  audio-consumer-worker-thread.md  isomorphic-hex-keyboard-geometry.md
claude/spikes/: README.md  event_queue.py  fft_plots.py  input_integration.py  input_to_sound_latency.py  kbd_input.py  keyboard_static_display.py  microtonal_triads.py  mouse_input.py  outputstream_callback.py  piano_chord_major_minor.py  piano_keyboard.py  piano_voice.py  playable_instrument.py  polyphony_voices.py  realtime_envelope_release.py
claude/tasks/: README.md  chord-launcher.md  current.md  done.md  mouse-hit-test.md  mouse-in-staged.md  press-duration.md
claude/ui-designs/: README.md  staged-chord-entry-hud.md
claude/vision/: README.md
examples/: play_app.py  play_synth.py
focused-spikes/: README.md
focused-spikes/shared/: README.md  __init__.py  bootstrap.py
focused-spikes/staged-chord-entry/: README.md  audition.py  hittest.py  hud.py  layout.py  main.py  press.py  staged_app.py  status_active.md
src/pypiano_2607/: __init__.py  app.py  config.py  events.py  mouse.py  pitch.py  queue.py  router.py  tuning.py
src/pypiano_2607/audio/: __init__.py  envelope.py  polysynth.py  voice.py
src/pypiano_2607/gui/: __init__.py  keyboard.py  qwerty.py
tests/: test_app.py  test_envelope.py  test_events.py  test_gui_package.py  test_integration.py  test_keyboard.py  test_mouse.py  test_pitch.py  test_polysynth.py  test_polysynth_extra.py  test_queue.py  test_qwerty.py  test_router.py  test_tuning.py  test_voice.py  test_voice_params.py
tools/: README.md  _repo.py  check_docs_links.py  run_spike_tests.py
